tests/requests/invalid/006.py
from gunicorn import LimitRequestLine
request = LimitRequestLine
